--- a/.babelrc
+++ b/.babelrc
@@ -4,12 +4,16 @@
 // Why? The react-transform-hmr plugin depends on HMR (and throws if
 // module.hot is disabled), so keeping it and related plugins contained
 // within webpack helps prevent unexpected errors.
+//{
+//  "presets": ["es2015", "react", "stage-0"],
+//  "plugins": [
+//    ["transform-runtime", {
+//      "polyfill": false,
+//      "regenerator": false
+//    }]
+//  ]
+//}
+
 {
-  "presets": ["es2015", "react", "stage-0"],
-  "plugins": [
-    ["transform-runtime", {
-      "polyfill": false,
-      "regenerator": false
-    }]
-  ]
+  "presets": ["es2015-node5", "react", "stage-0"]
 }
