--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/reactjs/redux.git"
+    "url": "https://github.com/dervos/.git"
   },
   "license": "MIT",
   "bugs": {
@@ -62,66 +62,75 @@
   },
   "homepage": "http://redux.js.org",
   "dependencies": {
-    "animate.css": "^3.5.1",
-    "axios": "^0.9.1",
+    "500px": "^0.5.1",
+    "600px": "0.0.1",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.5",
     "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-react-constant-elements": "^6.5.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.5",
-    "babel-plugin-transform-runtime": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.5.0",
     "babel-runtime": "^6.5.0",
     "better-npm-run": "0.0.8",
-    "browser-sync": "^2.11.2",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
     "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.8.4",
     "fs-extra": "^0.26.3",
+    "grant-koa": "^3.6.0",
     "history": "^2.0.0",
     "html-webpack-plugin": "^2.7.1",
     "humps": "^1.0.0",
     "imports-loader": "^0.6.5",
+    "js-cookie": "^2.1.0",
     "json-loader": "^0.5.4",
-    "koa": "^2.0.0-alpha.3",
+    "koa": "^2.0.0",
     "koa-connect-history-api-fallback": "^0.3.0",
     "koa-convert": "^1.2.0",
+    "koa-etag": "^3.0.0",
+    "koa-logger": "^1.3.0",
+    "koa-mount": "^2.0.0",
     "koa-proxy": "^0.5.0",
-    "koa-static": "^2.0.0",
-    "lodash": "^4.8.2",
+    "koa-redis": "^2.0.1",
+    "koa-route": "^3.1.0",
+    "koa-router": "^7.0.1",
+    "koa-session2": "^1.0.0",
+    "koa-static": "^3.0.0",
+    "lodash": "^4.10.0",
     "node-sass": "^3.3.3",
-    "normalize.css": "^4.0.0",
     "normalizr": "^2.0.0",
     "postcss-loader": "^0.8.0",
     "purecss": "^0.6.0",
+    "purest": "^2.0.1",
     "react": "^15.0.1",
     "react-addons-shallow-compare": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-pure": "git://github.com/PaulLeCam/react-pure.git#updates",
     "react-redux": "^4.4.2",
-    "react-router": "^2.0.0",
+    "react-router": "^2.1.1",
     "react-router-redux": "^4.0.0",
     "redux": "^3.4.0",
+    "redux-async-connect": "^1.0.0-rc4",
     "redux-logger": "^2.4.0",
-    "redux-promise-middleware": "^3.0.0",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
+    "thunkify": "^2.1.2",
     "type-to-reducer": "^1.0.1",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "yargs": "^4.0.0"
+    "webpack": "^1.12.15",
+    "yargs": "^4.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.0-beta.6",
+    "babel-preset-es2015-node5": "^1.2.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "chai-enzyme": "^0.4.0",
@@ -145,20 +154,15 @@
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack-with-fast-source-maps": "^1.9.2",
+    "koa-webpack-middleware": "^1.0.1",
     "mocha": "^2.2.5",
     "nodemon": "^1.8.1",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.3",
-    "react-addons-test-utils": "^15.0.0",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.2",
-    "redbox-react": "^1.2.2",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.9",
     "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.6.0"
+    "sinon-chai": "^2.8.0"
   }
 }
