--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-real-world-example",
-  "version": "0.0.0",
-  "description": "Redux real-world example",
+  "name": "verhitte-poging",
+  "version": "0.0.1",
+  "description": "",
   "scripts": {
     "clean": "rimraf dist",
     "compile": "better-npm-run compile",
@@ -28,7 +28,11 @@
       "command": "nodemon --exec babel-node bin/server",
       "env": {
         "NODE_ENV": "development",
-        "DEBUG": "app:*"
+        "DEBUG": "app:*",
+        "CONSUMER_KEY": "GvEAXk6cHDuELGqcaV38N2w7LjBTgcha8oVn8zwY",
+        "CONSUMER_SECRET": "7CwxJN4qcOCWbEacLCs96Beb5B77bF4lPiQGjy5K",
+        "TOKEN": "P8oh8eArttzod3JLxi0iaMHwI7MnPoXuK6pISrlH",
+        "TOKEN_SECRET": "IxwzdbOyCtWgUh2gGPno0fzypaGQnhD1rYp2o0XP"
       }
     },
     "deploy": {
@@ -54,16 +58,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dervos/.git"
+    "url": "https://github.com/dervos/laughing-dollop.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/reactjs/redux/issues"
+    "url": "https://github.com/dervos/laughing-dollop.git"
   },
   "homepage": "http://redux.js.org",
   "dependencies": {
-    "500px": "^0.5.1",
-    "600px": "0.0.1",
+    "600px": "git+https://github.com/mattjiggins/600px.git",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.5",
     "babel-loader": "^6.2.4",
@@ -81,7 +84,6 @@
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.8.4",
     "fs-extra": "^0.26.3",
-    "grant-koa": "^3.6.0",
     "history": "^2.0.0",
     "html-webpack-plugin": "^2.7.1",
     "humps": "^1.0.0",
@@ -91,14 +93,9 @@
     "koa": "^2.0.0",
     "koa-connect-history-api-fallback": "^0.3.0",
     "koa-convert": "^1.2.0",
-    "koa-etag": "^3.0.0",
-    "koa-logger": "^1.3.0",
     "koa-mount": "^2.0.0",
     "koa-proxy": "^0.5.0",
-    "koa-redis": "^2.0.1",
     "koa-route": "^3.1.0",
-    "koa-router": "^7.0.1",
-    "koa-session2": "^1.0.0",
     "koa-static": "^3.0.0",
     "lodash": "^4.10.0",
     "node-sass": "^3.3.3",
@@ -107,21 +104,20 @@
     "purecss": "^0.6.0",
     "purest": "^2.0.1",
     "react": "^15.0.1",
-    "react-addons-shallow-compare": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.2",
     "react-router": "^2.1.1",
-    "react-router-redux": "^4.0.0",
+    "react-router-redux": "^4.0.2",
+    "redial": "^0.4.1",
     "redux": "^3.4.0",
-    "redux-async-connect": "^1.0.0-rc4",
     "redux-logger": "^2.4.0",
+    "redux-saga": "^0.9.5",
     "redux-thunk": "^2.0.0",
+    "reselect": "^2.3.0",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
-    "thunkify": "^2.1.2",
-    "type-to-reducer": "^1.0.1",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.15",
     "yargs": "^4.6.0"
