--- a/package.json
+++ b/package.json
@@ -1,164 +1,50 @@
 {
-  "name": "verhitte-poging",
+  "name": "Verhittepoging",
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "clean": "rimraf dist",
-    "compile": "better-npm-run compile",
-    "lint": "eslint .",
-    "lint:fix": "npm run lint -- --fix",
-    "start": "better-npm-run start",
-    "dev": "better-npm-run dev",
-    "dev:nw": "npm run dev -- --nw",
-    "dev:no-debug": "npm run dev -- --no_debug",
-    "test": "better-npm-run test",
-    "test:dev": "npm run test -- --watch",
-    "deploy": "better-npm-run deploy",
-    "flow:check": "babel-node bin/flow-check",
-    "codecov": "cat coverage/*/lcov.info | codecov"
-  },
-  "betterScripts": {
-    "compile": {
-      "command": "babel-node bin/compile",
-      "env": {
-        "DEBUG": "app:*"
-      }
-    },
-    "dev": {
-      "command": "nodemon --exec babel-node bin/server",
-      "env": {
-        "NODE_ENV": "development",
-        "DEBUG": "app:*",
-        "CONSUMER_KEY": "GvEAXk6cHDuELGqcaV38N2w7LjBTgcha8oVn8zwY",
-        "CONSUMER_SECRET": "7CwxJN4qcOCWbEacLCs96Beb5B77bF4lPiQGjy5K",
-        "TOKEN": "P8oh8eArttzod3JLxi0iaMHwI7MnPoXuK6pISrlH",
-        "TOKEN_SECRET": "IxwzdbOyCtWgUh2gGPno0fzypaGQnhD1rYp2o0XP"
-      }
-    },
-    "deploy": {
-      "command": "npm run clean && npm run compile",
-      "env": {
-        "NODE_ENV": "production",
-        "DEBUG": "app:*"
-      }
-    },
-    "start": {
-      "command": "babel-node bin/server",
-      "env": {
-        "DEBUG": "app:*"
-      }
-    },
-    "test": {
-      "command": "babel-node ./node_modules/karma/bin/karma start build/karma.conf",
-      "env": {
-        "NODE_ENV": "test",
-        "DEBUG": "app:*"
-      }
-    }
+    "start": "nodemon --exec babel-node server.js",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dervos/laughing-dollop.git"
+    "url": "https://github.com/yelouafi/redux-saga"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dervos/laughing-dollop.git"
+    "url": "https://github.com/yelouafi/redux-saga/issues"
   },
-  "homepage": "http://redux.js.org",
+  "homepage": "http://yelouafi.github.io/redux-saga/",
   "dependencies": {
-    "600px": "git+https://github.com/mattjiggins/600px.git",
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.5",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-react-constant-elements": "^6.5.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.5",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.5.0",
-    "babel-runtime": "^6.5.0",
-    "better-npm-run": "0.0.8",
-    "css-loader": "^0.23.0",
-    "cssnano": "^3.3.2",
-    "debug": "^2.2.0",
-    "extract-text-webpack-plugin": "^1.0.0",
-    "file-loader": "^0.8.4",
-    "fs-extra": "^0.26.3",
-    "history": "^2.0.0",
-    "html-webpack-plugin": "^2.7.1",
+    "express-graphql": "^0.5.1",
+    "graphql": "^0.5.0",
     "humps": "^1.0.0",
-    "imports-loader": "^0.6.5",
-    "js-cookie": "^2.1.0",
-    "json-loader": "^0.5.4",
-    "koa": "^2.0.0",
-    "koa-connect-history-api-fallback": "^0.3.0",
-    "koa-convert": "^1.2.0",
-    "koa-mount": "^2.0.0",
-    "koa-proxy": "^0.5.0",
-    "koa-route": "^3.1.0",
-    "koa-static": "^3.0.0",
-    "lodash": "^4.10.0",
-    "node-sass": "^3.3.3",
+    "isomorphic-fetch": "^2.1.1",
+    "lodash": "^4.5.0",
     "normalizr": "^2.0.0",
-    "postcss-loader": "^0.8.0",
-    "purecss": "^0.6.0",
-    "purest": "^2.0.1",
-    "react": "^15.0.1",
-    "react-addons-test-utils": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.4.2",
-    "react-router": "^2.1.1",
-    "react-router-redux": "^4.0.2",
-    "redial": "^0.4.1",
-    "redux": "^3.4.0",
-    "redux-logger": "^2.4.0",
-    "redux-saga": "^0.9.5",
-    "redux-thunk": "^2.0.0",
-    "reselect": "^2.3.0",
-    "rimraf": "^2.5.1",
-    "sass-loader": "^3.0.0",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.15",
-    "yargs": "^4.6.0"
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
+    "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
+    "rebass": "^0.2.6",
+    "redux": "^3.3.1",
+    "redux-logger": "^2.6.0",
+    "redux-saga": "^0.9.1"
   },
   "devDependencies": {
-    "babel-eslint": "^6.0.0-beta.6",
-    "babel-preset-es2015-node5": "^1.2.0",
+    "babel-cli": "^6.0.0",
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
-    "chai-enzyme": "^0.4.0",
-    "cheerio": "^0.20.0",
-    "codecov": "^1.0.1",
-    "enzyme": "^2.0.0",
-    "eslint": "^2.4.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-config-standard-react": "^2.2.0",
-    "eslint-plugin-babel": "^3.0.0",
-    "eslint-plugin-flow-vars": "^0.3.0",
-    "eslint-plugin-promise": "^1.0.8",
-    "eslint-plugin-react": "^4.0.0",
-    "eslint-plugin-standard": "^1.3.1",
-    "flow-bin": "0.22.1",
-    "flow-interfaces": "^0.6.0",
-    "isparta-loader": "^2.0.0",
-    "karma": "^0.13.21",
-    "karma-coverage": "^0.5.0",
-    "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-webpack-with-fast-source-maps": "^1.9.2",
-    "koa-webpack-middleware": "^1.0.1",
-    "mocha": "^2.2.5",
-    "nodemon": "^1.8.1",
-    "phantomjs-polyfill": "0.0.2",
-    "phantomjs-prebuilt": "^2.1.3",
-    "redux-devtools": "^3.2.0",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.9",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "express": "^4.0.0",
+    "react-transform-hmr": "^1.0.0",
+    "redux-devtools": "^3.0.0",
+    "redux-devtools-dock-monitor": "^1.0.0",
+    "redux-devtools-log-monitor": "^1.0.0",
+    "webpack": "^1.9.11",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.0.0"
   }
 }
