--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "kerberos": "1.1.3",
     "lodash": "^4.5.0",
     "method-override": "^2.3.5",
-    "mongoose": "^4.4.7",
+    "mongoose": ">=5.7.5",
     "node-libs-browser": "^1.0.0",
     "normalizr": "^2.0.0",
     "passport": "^0.3.2",
